# snapback

./: .dockerignore  .gitignore  CLAUDE.md  DOCKER_IMPLEMENTATION_COMPLETE.md  DOCKER_TESTING.md  Dockerfile  Makefile  README.md  pyproject.toml  release_notes_v2.1.0.md  snapback  snapback.sh  snapdiff.sh  snapls.sh
.github/workflows/: docker-tests.yml
docker/: docker-compose.yml  generate-test-data.sh  test-matrix.yml  test-scenarios.sh
docs/: agentic-development.md
src/snapback/: __init__.py  backup.py  cli.py  config.py  diff.py  gitignore.py  recovery.py  snapshot.py  utils.py
tests/: conftest.py  test_backup.py  test_cli.py  test_config.py  test_diff.py  test_gitignore.py  test_path_security.py  test_recovery.py  test_snapshot.py  test_utils.py  test_version.py
